--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,18 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["english", "developer_chatbot", "open_browser"]
+packages = [
+    "english",
+    "developer_chatbot",
+    "open_browser",
+    "personal_helper",
+    ]
 
 [tool.setuptools.package-dir]
 "english" = "src/english"
 "developer_chatbot" = "src/developer_chatbot"
 "open_browser" = "src/open_browser"
+"personal_helper" = "src/personal_helper"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
